--- a/btr/templates/index.html
+++ b/btr/templates/index.html
@@ -6,9 +6,7 @@
 {% include 'modals/location.html' %}
 {% include 'modals/contacts.html' %}
 <div class="head-bg">
-    <div class="navbar-bg mb-5">
-        {% include 'navbar.html' %}
-    </div>
+    <div class="navbar-bg mb-5">{% include 'navbar.html' %}</div>
     {% include 'messages.html' %}
     <div class="container">
         <div class="row mb-5">
