[LAYOUT] fix oversize

--- a/btr/templates/briefing/briefing.html
+++ b/btr/templates/briefing/briefing.html
@@ -20,10 +20,10 @@
     </div>
 </div>
 <div class="container mb-4">
-    <div class="row">
+    <div class="row p-4">
         <blockquote class="blockquote-6">
             <h3>{% translate 'In case of injury, bruises or other harm to your health, we are not responsible.' %}</h3>
-            <cite>{% translate 'BroTeamRacing Team' %}</cite>
+            <cite class="m-0">{% translate 'BroTeamRacing Team' %}</cite>
         </blockquote>
     </div>
 </div>
