--- a/btr/templates/contacts/contacts.html
+++ b/btr/templates/contacts/contacts.html
@@ -17,14 +17,14 @@
 <div class="mb-5"></div>
 <div class="container">
     <div class="row">
-        <div class="col-md-6 text-center mb-3">
+        <div class="col-lg-6 text-center mb-3">
             <iframe
                 class="map"
                 src="https://yandex.ru/map-widget/v1/?um=constructor%3A233968824c8a6dbdaff05b1683937b084ed7b842db1491000f4f7227a39a82af&amp;source=constructor"
                 width="600" height="400" frameborder="0">
             </iframe>
         </div>
-        <div class="col-md-6">
+        <div class="col-lg-6">
             <div class="contact-block">
                 <h2>{% translate 'Below are the contacts where you can contact us.' %}</h2>
                 <hr>
