--- a/static/css/contacts.css
+++ b/static/css/contacts.css
@@ -5,6 +5,14 @@
 
 @media (max-width: 768px) {
     .map {
-        width: 450px;
+        width: 350px;
+        height: 350px;
+    }
+}
+
+@media (max-width: 1400px) {
+    .col-lg-6 {
+        flex: 1;
+        width: 100%;
     }
 }
