[LAYOUT] re-make profile page

--- a/btr/templates/reviews/reviews.html
+++ b/btr/templates/reviews/reviews.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <link rel="stylesheet" type="text/css" href="{% static 'css/reviews.css' %}">
-<div class="navbar-bg lg-m-b">{% include 'navbar.html' %}</div>
+<div class="black-bg lg-m-b">{% include 'navbar.html' %}</div>
 <div class="container">
     <div class="row lg-m-b">
         <div class="col-lg-3 col-0"></div>
