--- a/static/css/head.css
+++ b/static/css/head.css
@@ -12,6 +12,10 @@
     background-color: rgba(0, 0, 0, 0.6);
 }
 
+.black-bg {
+    background-color: black;
+}
+
 .navbar-bg:hover {
     background-color: black;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
@@ -30,4 +34,9 @@
 
 .nav-item:hover a.nav-link {
     color: black;
+}
+
+.navbar .navbar-toggler-icon {
+    opacity: 1;
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
 }
