--- a/btr/templates/briefing/briefing.html
+++ b/btr/templates/briefing/briefing.html
@@ -4,7 +4,7 @@
 {% block content %}
 <link rel="stylesheet" type="text/css" href="{% static 'css/briefing.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'css/blackquote.css' %}">
-<div class="navbar-bg lg-m-b">{% include 'navbar.html' %}</div>
+<div class="black-bg lg-m-b">{% include 'navbar.html' %}</div>
 <div class="container mb-3">
     <div class="row text-center mb-5">
         <h1 class="display-5">{% translate 'Safety instructions' %}</h1>
