--- a/btr/templates/contacts/contacts.html
+++ b/btr/templates/contacts/contacts.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <link rel="stylesheet" type="text/css" href="{% static 'css/contacts.css' %}">
-<div class="navbar-bg lg-m-b">{% include 'navbar.html' %}</div>
+<div class="black-bg lg-m-b">{% include 'navbar.html' %}</div>
 <div class="container">
     <div class="row text-center">
         <h1 class="display-5">{% translate 'Contacts' %}</h1>
