--- a/btr/templates/navbar.html
+++ b/btr/templates/navbar.html
@@ -6,7 +6,7 @@
         <div class="col-lg-10 col-12">
             <nav class="navbar navbar-expand-lg">
               <a class="navbar-brand" href="{% url 'home' %}"><img class="cyan-img" src="{% static 'images/favicon.ico' %}" alt="Icon" width="40" height="40"></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <button class="navbar-toggler btn btn-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
