--- a/btr/templates/users/profile.html
+++ b/btr/templates/users/profile.html
@@ -1,184 +1,185 @@
 {% extends 'base.html' %}
-{% load static %}
-{% load i18n %}
+{% load static i18n %}
 
 {% block content %}
-<div class="dark-bg">
-  <div class="container text-center text-white">
-    <div class="row">
-      <h1 class="display-5 text-center text-white mt-3">{% translate 'Profile' %}</h1>
-      <div class="col-lg-3 col-0"></div>
-        <div class="col-lg-6 col-12 text-center mb-3">
-          <hr class="h-line-light">
-        </div>
-      <div class="col-lg-3 col-0"></div>
-    </div>
+<link rel="stylesheet" type="text/css" href="{% static 'css/profile.css' %}">
+<div class="black-bg lg-m-b">{% include 'navbar.html' %}</div>
+<div class="container text-center">
+  <div class="row">
+    <h1 class="display-5 text-center mt-3">{% translate 'Profile' %}</h1>
+    <div class="col-lg-3 col-0"></div>
+      <div class="col-lg-6 col-12 text-center mb-3">
+        <hr class="h-line-dark">
+      </div>
+    <div class="col-lg-3 col-0"></div>
   </div>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-4 mb-3">
-        <div class="card card-bg h-100 frame">
-          <div class="card-body">
-            <div class="d-flex flex-column align-items-center text-center">
-              {% if user.profile_image %}
-                <img src="{{ user.profile_image.url|safe }}" alt="user" width="150" height="150" style="border-radius: 50%; object-fit: cover;">
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-md-4 mb-3">
+      <div class="card profile-bg h-100 frame">
+        <div class="card-body">
+          <div class="d-flex flex-column align-items-center text-center">
+            {% if user.profile_image %}
+              <img src="{{ user.profile_image.url|safe }}" alt="user" width="150" height="150" style="border-radius: 50%; object-fit: cover;">
+            {% else %}
+              <img src="{% static 'images/Profile.png' %}" alt="user" width="150" height="150" style="border-radius: 50%; object-fit: cover;">
+            {% endif %}
+            <div class="mt-3">
+              <h4 class="text-white">{{ user.username }}</h4>
+              <p class="text-secondary text-white mb-4 mt-1">{{ user.status }}</p>
+              {% if user.is_superuser %}
+                <a href="{% url 'admin:index' %}" class="btn btn-success">{% translate 'Manage Site' %}</a>
               {% else %}
-                <img src="{% static 'images/Profile.png' %}" alt="user" width="150" height="150" style="border-radius: 50%; object-fit: cover;">
+                <a class="btn btn-light" href="{% url 'bookings' %}" >{% translate 'Book Now' %}</a>
               {% endif %}
-              <div class="mt-3">
-                <h4 class="text-white">{{ user.username }}</h4>
-                <p class="text-secondary text-white mb-4 mt-1">{{ user.status }}</p>
-                {% if user.is_superuser %}
-                  <a href="{% url 'admin:index' %}" class="btn btn-success">{% translate 'Manage Site' %}</a>
-                {% else %}
-                  <a class="btn btn-light" href="{% url 'bookings' %}" >{% translate 'Book Now' %}</a>
-                {% endif %}
-              </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="col mb-3">
-        <div class="card card-bg text-white h-100 frame">
-          <div class="card-body">
-            <h3 class="card-title">{% translate 'Personal info' %}</h3>
-            <div class="my-5"></div>
-            <div class="row">
-              <div class="col-sm-3">
-                <h6 class="mb-0 text-white">{% translate 'Name' %}</h6>
-              </div>
-              <div class="col-sm-9 text-secondary text-white">
-                {{ user.first_name }}
-              </div>
+    </div>
+    <div class="col mb-3">
+      <div class="card profile-bg text-white h-100 frame">
+        <div class="card-body">
+          <h3 class="card-title">{% translate 'Personal info' %}</h3>
+          <div class="my-5"></div>
+          <div class="row">
+            <div class="col-sm-3">
+              <h6 class="mb-0 text-white">{% translate 'Name' %}</h6>
             </div>
-            <hr class="text-white">
-            <div class="row">
-              <div class="col-sm-3">
-                <h6 class="mb-0 text-white">{% translate 'Email' %}</h6>
-              </div>
-              <div class="col-sm-9 text-secondary text-white">
-                {{ user.email }}
-              </div>
+            <div class="col-sm-9 text-secondary text-white">
+              {{ user.first_name }}
             </div>
-            <hr class="text-white">
-            <div class="row">
-              <div class="col-sm-3">
-                <h6 class="mb-0 text-white">{% translate 'Phone' %}</h6>
-              </div>
-              <div class="col-sm-9 text-secondary text-white">
-                {{ user.phone_number }}
-              </div>
-            </div>
-            <hr class="text-white">
-            <div class="my-4"></div>
-            <a href="{% url 'user_edit' pk=user.pk %}" class="btn btn-outline-warning">{% translate 'Edit Profile' %}</a>
           </div>
+          <hr class="text-white">
+          <div class="row">
+            <div class="col-sm-3">
+              <h6 class="mb-0 text-white">{% translate 'Email' %}</h6>
+            </div>
+            <div class="col-sm-9 text-secondary text-white">
+              {{ user.email }}
+            </div>
+          </div>
+          <hr class="text-white">
+          <div class="row">
+            <div class="col-sm-3">
+              <h6 class="mb-0 text-white">{% translate 'Phone' %}</h6>
+            </div>
+            <div class="col-sm-9 text-secondary text-white">
+              {{ user.phone_number }}
+            </div>
+          </div>
+          <hr class="text-white">
+          <div class="my-4"></div>
+          <a href="{% url 'user_edit' pk=user.pk %}" class="btn btn-outline-warning">{% translate 'Edit Profile' %}</a>
         </div>
       </div>
-      <div class="container">
-        <div class="row">
-          <div class="col-12 col-sm-6 mb-3">
-            <div class="card h-100 card-bg text-white">
-              <h5 class="booking-card-header">
-                {% translate 'Current bookings' %}
-              </h5>
-              <div class="card-body d-flex flex-column justify-content-center align-items-center">
-                {% if not current_bookings %}
-                  <div class="card-text text-center">
-                      <h4 class="fs-4">
-                          {% translate 'There are not current bookings yet...' %}
-                      </h4>
-                  </div>
-                {% else %}
-                  <div class="table table-responsive">
-                    <table class="table">
-                      <thead class="text-white">
-                        <tr>
-                          <th scope="col">ID</th>
-                          <th scope="col">{% translate 'Date' %}</th>
-                          <th scope="col">{% translate 'Begin time' %}</th>
-                          <th scope="col">{% translate 'End time' %}</th>
-                          <th scope="col">{% translate 'Status' %}</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        {% for ride in current_bookings %}
-                          {% if ride.status == _('pending') %}
-                            <tr class="table-warning">
-                          {% else %}
-                            <tr class="table-success">
-                          {% endif %}
-                            <th scope="row">{{ ride.id }}</th>
-                            <td>{{ ride.booking_date }}</td>
-                            <td>{{ ride.start_time }}</td>
-                            <td>{{ ride.end_time }}</td>
-                            <td>{{ ride.status }}</td>
-                          </tr>
-                        {% endfor %}
-                      </tbody>
-                    </table>
-                  </div>
-                {% endif %}
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-sm-6 mb-3">
-            <div class="card h-100 card-bg text-white">
-              <h5 class="booking-card-header">
-                {% translate 'History' %}
-              </h5>
-              <div class="card-body d-flex flex-column justify-content-center align-items-center">
-                {% if not completed_bookings %}
-                  <div class="card-text text-center">
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-12 col-sm-6 mb-3">
+          <div class="card h-100 profile-bg text-white">
+            <h5 class="booking-card-header">
+              {% translate 'Current bookings' %}
+            </h5>
+            <div class="card-body d-flex flex-column justify-content-center align-items-center">
+              {% if not current_bookings %}
+                <div class="card-text text-center">
                     <h4 class="fs-4">
-                        {% translate 'There are not completed bookings yet...' %}
+                        {% translate 'There are not current bookings yet...' %}
                     </h4>
-                  </div>
-                {% else %}
-                  <div class="table table-responsive">
-                    <table class="table">
-                      <thead class="text-white">
-                        <tr>
-                          <th scope="col">ID</th>
-                          <th scope="col">{% translate 'Date' %}</th>
-                          <th scope="col">{% translate 'Begin time' %}</th>
-                          <th scope="col">{% translate 'End time' %}</th>
-                          <th scope="col">{% translate 'Status' %}</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                      {% for booking in completed_bookings %}
-                        {% if booking.status == _('completed') %}
-                          <tr class="table-primary">
+                </div>
+              {% else %}
+                <div class="table table-responsive">
+                  <table class="table">
+                    <thead class="text-white">
+                      <tr>
+                        <th scope="col">ID</th>
+                        <th scope="col">{% translate 'Date' %}</th>
+                        <th scope="col">{% translate 'Begin time' %}</th>
+                        <th scope="col">{% translate 'End time' %}</th>
+                        <th scope="col">{% translate 'Status' %}</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      {% for ride in current_bookings %}
+                        {% if ride.status == _('pending') %}
+                          <tr class="table-warning">
                         {% else %}
-                          <tr class="table-danger">
+                          <tr class="table-success">
                         {% endif %}
-                          <th scope="row">{{ booking.id }}</th>
-                          <td>{{ booking.booking_date }}</td>
-                          <td>{{ booking.start_time }}</td>
-                          <td>{{ booking.end_time }}</td>
-                          <td>{{ booking.status }}</td>
+                          <th scope="row">{{ ride.id }}</th>
+                          <td>{{ ride.booking_date }}</td>
+                          <td>{{ ride.start_time }}</td>
+                          <td>{{ ride.end_time }}</td>
+                          <td>{{ ride.status }}</td>
                         </tr>
                       {% endfor %}
-                      </tbody>
-                    </table>
-                  </div>
-                {% endif %}
-              </div>
+                    </tbody>
+                  </table>
+                </div>
+              {% endif %}
             </div>
           </div>
         </div>
-        <div class="row text-center text-white">
-          <div class="col-lg-3 col-0"></div>
-          <div class="col-lg-6 col-12 my-4">
-            <h4 class="fs-5">
-            {% translate 'If you liked the ride, leave a ' %}
-              <a href="https://vk.com/topic-211850637_49522524" style="color: red; font-weight: bold;">{% translate 'review' %}</a>
-            </h4>
-          <div class="col-lg-3 col-0"></div>
+        <div class="col-12 col-sm-6 mb-3">
+          <div class="card h-100 profile-bg text-white">
+            <h5 class="booking-card-header">
+              {% translate 'History' %}
+            </h5>
+            <div class="card-body d-flex flex-column justify-content-center align-items-center">
+              {% if not completed_bookings %}
+                <div class="card-text text-center">
+                  <h4 class="fs-4">
+                      {% translate 'There are not completed bookings yet...' %}
+                  </h4>
+                </div>
+              {% else %}
+                <div class="table table-responsive">
+                  <table class="table">
+                    <thead class="text-white">
+                      <tr>
+                        <th scope="col">ID</th>
+                        <th scope="col">{% translate 'Date' %}</th>
+                        <th scope="col">{% translate 'Begin time' %}</th>
+                        <th scope="col">{% translate 'End time' %}</th>
+                        <th scope="col">{% translate 'Status' %}</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                    {% for booking in completed_bookings %}
+                      {% if booking.status == _('completed') %}
+                        <tr class="table-primary">
+                      {% else %}
+                        <tr class="table-danger">
+                      {% endif %}
+                        <th scope="row">{{ booking.id }}</th>
+                        <td>{{ booking.booking_date }}</td>
+                        <td>{{ booking.start_time }}</td>
+                        <td>{{ booking.end_time }}</td>
+                        <td>{{ booking.status }}</td>
+                      </tr>
+                    {% endfor %}
+                    </tbody>
+                  </table>
+                </div>
+              {% endif %}
+            </div>
           </div>
         </div>
       </div>
+      <div class="mb-5"></div>
+      <div class="row text-center">
+        <div class="col-lg-3 col-0"></div>
+        <div class="col-lg-6 col-12">
+          <h4 class="fs-5">
+          {% translate 'If you liked the ride, leave a ' %}
+            <a href="https://vk.com/topic-211850637_49522524" style="color: red; font-weight: bold;">{% translate 'review' %}</a>
+          </h4>
+        <div class="col-lg-3 col-0"></div>
+        </div>
+      </div>
+      <div class="mb-5"></div>
     </div>
   </div>
 </div>
