--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -1,6 +1,4 @@
-/*styles for bike cards*/
-
-.card-bg {
+.profile-bg {
     background-color: rgb(28, 29, 37);
     border: 10px solid rgba(255, 255, 255, 0.5);
     border-radius: 40px 40px 40px 40px;
@@ -8,13 +6,14 @@
     transition: background-color 0.3s, box-shadow 0.3s;
 }
 
-.card-bg:hover {
+.profile-bg:hover {
     background-color: black;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.6);
 }
 
-.card-bg img {
-    width: 350px;
-    height: 350px;
+.profile-bg img {
+    width: 150px;
+    height: 150px;
     object-fit: cover;
+    border-radius: 50%;
 }
