[LAYOUT] re-make modals

--- a/btr/templates/base.html
+++ b/btr/templates/base.html
@@ -13,6 +13,7 @@
       <link rel="stylesheet" type="text/css" href="{% static 'css/gallery.css' %}">
       <link rel="stylesheet" type="text/css" href="{% static 'css/video.css' %}">
       <link rel="stylesheet" type="text/css" href="{% static 'css/bikes.css' %}">
+      <link rel="stylesheet" type="text/css" href="{% static 'css/modals.css' %}">
       <link rel="icon" href="{% static 'images/favicon.ico' %}" type="image/x-icon" sizes="32x32">
       <link href="{% static 'dist/css/lightbox.css' %}" rel="stylesheet" />
       <script src="https://vk.com/js/api/openapi.js?169" type="text/javascript"></script>
