--- a/btr/templates/auth_form.html
+++ b/btr/templates/auth_form.html
@@ -4,34 +4,34 @@
 
 {% block content %}
 
-<div class="dark-bg">
-    <div class="container lg-p-y">
-        <div class="row frame-dark">
-            <div class="col-lg-3 col-0"></div>
-            <div class="col-lg-6 col-12 lg-m-y">
-                <h1 class="mb-5 text-center text-white">{{ header }}</h1>
-                <form method="post" class="text-white">
-                    {% csrf_token %}
-                    {% bootstrap_form form %}
-                    <input class="btn btn-success" type="submit" value="{{ button }}">
-                </form>
-                {% if header == _('Sign In') %}
-                    <hr class="text-white">
-                    <div class="row">
-                        <div class="col-5 mt-3"><h6 class="fs-6 text-white">{% translate 'Do not have an account?' %}</h6></div>
-                        <div class="col-2"></div>
-                        <div class="col-5 text-center">
-                            <h6 class="fs-6 text-white mt-3 mb-3">
-                                {% translate 'Forgot the ' %}
-                                <a href="{% url 'auth-reset' %}">{% translate 'Password?' %}</a>
-                            </h6>
-                        </div>
-                    </div>
-                    <a class="btn btn-outline-info" href="{% url 'registration' %}">{% translate 'Sign Up' %}</a>
-                {% endif %}
-            </div>
-            <div class="col-3"></div>
-        </div>
-    </div>
-</div>
-{% endblock %}
+<!--<div class="dark-bg">-->
+<!--    <div class="container lg-p-y">-->
+<!--        <div class="row frame-dark">-->
+<!--            <div class="col-lg-3 col-0"></div>-->
+<!--            <div class="col-lg-6 col-12 lg-m-y">-->
+<!--                <h1 class="mb-5 text-center text-white">{{ header }}</h1>-->
+<!--                <form method="post" class="text-white">-->
+<!--                    {% csrf_token %}-->
+<!--                    {% bootstrap_form form %}-->
+<!--                    <input class="btn btn-success" type="submit" value="{{ button }}">-->
+<!--                </form>-->
+<!--                {% if header == _('Sign In') %}-->
+<!--                    <hr class="text-white">-->
+<!--                    <div class="row">-->
+<!--                        <div class="col-5 mt-3"><h6 class="fs-6 text-white">{% translate 'Do not have an account?' %}</h6></div>-->
+<!--                        <div class="col-2"></div>-->
+<!--                        <div class="col-5 text-center">-->
+<!--                            <h6 class="fs-6 text-white mt-3 mb-3">-->
+<!--                                {% translate 'Forgot the ' %}-->
+<!--                                <a href="{% url 'auth-reset' %}">{% translate 'Password?' %}</a>-->
+<!--                            </h6>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    <a class="btn btn-outline-info" href="{% url 'registration' %}">{% translate 'Sign Up' %}</a>-->
+<!--                {% endif %}-->
+<!--            </div>-->
+<!--            <div class="col-3"></div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
+<!--{% endblock %}-->
