--- a/btr/templates/forms/user_edit.html
+++ b/btr/templates/forms/user_edit.html
@@ -11,11 +11,8 @@
             <div class="row mt-4 text-center">
                 <div class="col-lg-3 col-0"></div>
                 <div class="col-lg-6 col-0">
-                    <img src="{% static 'images/reset.png' %}" width="170" height="170" alt="Reset">
-                    <h2 class="text-center mt-3">{% translate 'Password Reset' %}</h2>
-                    <div class="mb-3"></div>
-                    <p>{% translate 'To restore access to your account, enter your' %}<strong>{% translate 'email' %}</strong></p>
-                    <p><strong>{% translate 'Confirmation code' %}</strong>{% translate 'will be sent to it' %}</p>
+                    <img src="{% static 'images/edit.png' %}" width="170" height="170" alt="Auth">
+                    <h2 class="text-center mt-3">{% translate 'Profile Edit' %}</h2>
                     <div class="mb-5"></div>
                 </div>
                 <div class="col-lg-3 col-0"></div>
@@ -26,17 +23,18 @@
                     <form method="post">
                         {% csrf_token %}
                         {% bootstrap_form form %}
-                        <div class="d-flex justify-content-between">
-                            <h4 class="modal-link-s">{% translate 'Do not have an account?' %}</h4>
-                            <a class="modal-link-s" href="{% url 'registration' %}">{% translate 'Create account' %}</a>
-                        </div>
-                        <div class="mb-4"></div>
-                        <input class="btn btn-success" type="submit" value="{% translate 'Send Verification Code' %}">
+                        <input class="btn btn-success" type="submit" value="{% translate 'Confirm' %}">
                     </form>
+                    <div class="mb-5"></div>
                 </div>
                 <div class="col-lg-3 col-0"></div>
-                <div class="lg-m-b"></div>
             </div>
+            <div class="row text-center">
+                <a class="link-danger modal-link" href="{% url 'user_delete' pk=user.pk %}">
+                    {% translate 'Delete profile' %}
+                </a>
+            </div>
+            <div class="pb-5"></div>
         </div>
     </div>
 </div>
