[LAYOUT] fix bootstrap flashes move other items

--- a/btr/templates/base.html
+++ b/btr/templates/base.html
@@ -37,12 +37,14 @@
     </script>
     <script>
         document.addEventListener("DOMContentLoaded", function () {
-
             var alertElements = document.querySelectorAll('.alert');
 
             alertElements.forEach(function (alert) {
                 setTimeout(function () {
-                    alert.style.display = 'none';
+                    alert.classList.add('fade-out');
+                    setTimeout(function () {
+                        alert.style.display = 'none';
+                    }, 1000);
                 }, 5000);
             });
         });
