--- a/btr/templates/index.html
+++ b/btr/templates/index.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
-
 {% load django_bootstrap5 i18n static %}
 
 {% block content %}
 {% include 'modals/location.html' %}
 {% include 'modals/contacts.html' %}
 <div class="head-bg">
-    <div class="navbar-bg mb-5">{% include 'navbar.html' %}</div>
+    <div class="navbar-bg">{% include 'navbar.html' %}</div>
     {% include 'messages.html' %}
+    <div class="mb-5"></div>
     <div class="container">
         <div class="row mb-5">
             <img class="coral-img" src="{% static 'images/head.png' %}" alt="Head">
@@ -22,7 +22,7 @@
             </div>
             <div class="col-lg-6 col-12 d-flex align-items-center my-5">
                 <a data-bs-toggle="modal" data-bs-target="#locationMap">
-                    <img class="coral-img img-fluid" src="{% static 'images/point1.png' %}" alt="point">
+                    <img class="coral-img img-fluid" src="{% static 'images/location.png' %}" alt="point">
                 </a>
                 <div class="d-flex flex-column justify-content-between">
                     <p class="fs-2 mt-4 text-white">
