--- a/btr/templates/modals/user.html
+++ b/btr/templates/modals/user.html
@@ -1,6 +1,5 @@
 {% load static i18n %}
 
-{% block content %}
 <div class="modal fade" id="userModal" tabindex="-1" aria-labelledby="userModalLabel" aria-hidden="true">
     <div class="modal-dialog auth-modal" id="customModalDialog">
         <div class="modal-content modal-bg">
@@ -8,7 +7,7 @@
                 {% if user.profile_image %}
                   <img class="img-modal" src="{{ user.profile_image.url|safe }}" alt="lk">
                 {% else %}
-                  <img src="{% static 'images/lk.png' %}" alt="lk" width="60" height="60">
+                  <img src="{% static 'images/default_pi.png' %}" alt="image" width="60" height="60">
                 {% endif %}
                 <h5 class="mt-4">{{ user.username }}</h5>
                 <p>{{ user.email }}</p>
@@ -50,4 +49,3 @@
         </div>
     </div>
 </div>
-{% endblock %}
