rename video frame picture

--- a/btr/templates/video.html
+++ b/btr/templates/video.html
@@ -3,7 +3,7 @@
 <div class="ram-video-3">
     <div class="tv-wrap">
         <div class="tv-ram">
-            <img alt="frame" src="{% static 'images/ram-3.png' %}">
+            <img alt="frame" src="{% static 'images/notebook.png' %}">
         </div>
         <div data-video="zHs_ivENQpU" class="tv-video"></div>
     </div>
